--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,25 @@
 events {}
 
 http {
+    
     upstream auth_service {
-        server auth-service1:8000;
-        server auth-service2:8000;
+        server auth-service:8000;
     }
 
-    upstream todo_list_service {
-        server todo-list-service1:8000;
-        server todo-list-service2:8000;
+    upstream product_service {
+        server product-service:8000;
+    }
+
+    upstream order_service {
+        server order-service:8000;
+    }
+
+    upstream admin_service {
+        server admin-service:8000;
+    }
+
+    upstream user_service {
+        server user-service:8000;
     }
 
     server {
@@ -19,13 +30,20 @@ http {
             proxy_pass http://auth_service/;
         }
 
-        location /todo-list/ {
-            proxy_pass http://todo_list_service/;
-            
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        location /product/ {
+            proxy_pass http://product_service/;
+        }
+
+        location /order/ {
+            proxy_pass http://order_service/;
+        }
+
+        location /admin/ {
+            proxy_pass http://admin_service/;
+        }
+
+        location /user/ {
+            proxy_pass http://user_service/;
         }
     }
 }
