--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD with Kind
 
 on:
   push:
@@ -8,118 +8,113 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     env:
+      # FastAPI Ports
       EXTERNAL_FASTAPI_PORT: ${{ vars.EXTERNAL_FASTAPI_PORT }}
       INTERNAL_FASTAPI_PORT: ${{ vars.INTERNAL_FASTAPI_PORT }}
+
+      # Base URLs
       AUTH_BASE_URL: ${{ vars.AUTH_BASE_URL }}
       PRODUCT_BASE_URL: ${{ vars.PRODUCT_BASE_URL }}
       ORDER_BASE_URL: ${{ vars.ORDER_BASE_URL }}
+
+      # DB Stack
       AUTH_DB_STACK: ${{ vars.AUTH_DB_STACK }}
       PRODUCT_DB_STACK: ${{ vars.PRODUCT_DB_STACK }}
       ORDER_DB_STACK: ${{ vars.ORDER_DB_STACK }}
+
+      # MongoDB
       MONGO_HOST: ${{ vars.MONGO_HOST }}
       MONGO_PORT: ${{ vars.MONGO_PORT }}
       MONGO_INITDB_ROOT_USERNAME: ${{ vars.MONGO_INITDB_ROOT_USERNAME }}
       MONGO_INITDB_ROOT_PASSWORD: ${{ vars.MONGO_INITDB_ROOT_PASSWORD }}
       MONGO_INITDB_DATABASE: ${{ vars.MONGO_INITDB_DATABASE }}
+
+      # PostgreSQL
       POSTGRES_HOST: ${{ vars.POSTGRES_HOST }}
       POSTGRES_PORT: ${{ vars.POSTGRES_PORT }}
       POSTGRES_USER: ${{ vars.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ vars.POSTGRES_PASSWORD }}
       POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+
+      # PGAdmin
       PGADMIN_DEFAULT_EMAIL: ${{ vars.PGADMIN_DEFAULT_EMAIL }}
       PGADMIN_DEFAULT_PASSWORD: ${{ vars.PGADMIN_DEFAULT_PASSWORD }}
+
+      # JWT
       JWT_SECRET: ${{ vars.JWT_SECRET }}
       JWT_ALGORITHM: ${{ vars.JWT_ALGORITHM }}
       JWT_EXPIRATION_MINUTES: ${{ vars.JWT_EXPIRATION_MINUTES }}
       JWT_REFRESH_EXPIRATION_MINUTES: ${{ vars.JWT_REFRESH_EXPIRATION_MINUTES }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # 1. Checkout repo
+      - uses: actions/checkout@v3
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # 2. Setup Docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build and Push auth
+      # 3. Install Kind
+      - name: Install Kind
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/auth:latest ./auth_service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/auth:latest
+          curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.25.0/kind-linux-amd64
+          chmod +x ./kind
+          sudo mv ./kind /usr/local/bin/kind
 
-      - name: Build and Push product
+      # 4. Create Kind cluster
+      - name: Create Kind cluster
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/product:latest ./product_service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/product:latest
+          kind create cluster --name ci-cd-cluster
 
-      - name: Build and Push order
+      # 5. Verify cluster
+      - name: Check cluster nodes
+        run: kubectl get nodes
+
+      # 6. Build and load Docker images for FastAPI services
+      - name: Build and load auth
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/order:latest ./order_service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/order:latest
+          docker build -t auth:latest ./auth_service
+          kind load docker-image auth:latest --name ci-cd-cluster
 
-      - name: Build and Push admin
+      - name: Build and load product
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/admin:latest ./admin_service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/admin:latest
+          docker build -t product:latest ./product_service
+          kind load docker-image product:latest --name ci-cd-cluster
 
-      - name: Build and Push user
+      - name: Build and load order
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user:latest ./user_service
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/user:latest
+          docker build -t order:latest ./order_service
+          kind load docker-image order:latest --name ci-cd-cluster
 
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: "latest"
-
-      - name: Configure kubeconfig
+      - name: Build and load admin
         run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > $HOME/.kube/config
+          docker build -t admin:latest ./admin_service
+          kind load docker-image admin:latest --name ci-cd-cluster
 
-      # - name: Apply ConfigMap from .env
-      #   run: |
-      #     kubectl create configmap app-config --from-env-file=.env -o yaml --dry-run=client | kubectl apply -f -
-      - name: Create ConfigMap from Variables
+      - name: Build and load user
         run: |
-          kubectl create configmap app-config \
-            --from-literal=EXTERNAL_FASTAPI_PORT=$EXTERNAL_FASTAPI_PORT \
-            --from-literal=INTERNAL_FASTAPI_PORT=$INTERNAL_FASTAPI_PORT \
-            --from-literal=AUTH_BASE_URL=$AUTH_BASE_URL \
-            --from-literal=PRODUCT_BASE_URL=$PRODUCT_BASE_URL \
-            --from-literal=ORDER_BASE_URL=$ORDER_BASE_URL \
-            --from-literal=AUTH_DB_STACK=$AUTH_DB_STACK \
-            --from-literal=PRODUCT_DB_STACK=$PRODUCT_DB_STACK \
-            --from-literal=ORDER_DB_STACK=$ORDER_DB_STACK \
-            --from-literal=MONGO_HOST=$MONGO_HOST \
-            --from-literal=MONGO_PORT=$MONGO_PORT \
-            --from-literal=MONGO_INITDB_ROOT_USERNAME=$MONGO_INITDB_ROOT_USERNAME \
-            --from-literal=MONGO_INITDB_ROOT_PASSWORD=$MONGO_INITDB_ROOT_PASSWORD \
-            --from-literal=MONGO_INITDB_DATABASE=$MONGO_INITDB_DATABASE \
-            --from-literal=POSTGRES_HOST=$POSTGRES_HOST \
-            --from-literal=POSTGRES_PORT=$POSTGRES_PORT \
-            --from-literal=POSTGRES_USER=$POSTGRES_USER \
-            --from-literal=POSTGRES_PASSWORD=$POSTGRES_PASSWORD \
-            --from-literal=POSTGRES_DB=$POSTGRES_DB \
-            --from-literal=PGADMIN_DEFAULT_EMAIL=$PGADMIN_DEFAULT_EMAIL \
-            --from-literal=PGADMIN_DEFAULT_PASSWORD=$PGADMIN_DEFAULT_PASSWORD \
-            --from-literal=JWT_SECRET=$JWT_SECRET \
-            --from-literal=JWT_ALGORITHM=$JWT_ALGORITHM \
-            --from-literal=JWT_EXPIRATION_MINUTES=$JWT_EXPIRATION_MINUTES \
-            --from-literal=JWT_REFRESH_EXPIRATION_MINUTES=$JWT_REFRESH_EXPIRATION_MINUTES \
-            -o yaml --dry-run=client | kubectl apply -f -
+          docker build -t user:latest ./user_service
+          kind load docker-image user:latest --name ci-cd-cluster
 
       - name: Apply nginx ConfigMap from file
         run: |
           kubectl create configmap nginx-config --from-file=nginx.conf -o yaml --dry-run=client | kubectl apply -f -
 
-      - name: Deploy to Kubernetes
+      # 7. Deploy Kubernetes manifests
+      - name: Deploy to Kind cluster
         run: |
           kubectl apply -f k8s/
 
-      - name: Restart nginx to pick up new config
+      - name: Restart Nginx
         run: |
-          kubectl rollout restart deployment/nginx-deployment
+          kubectl rollout restart deployment nginx
+
+      # 8. Verify Pods
+      - name: Check Pods status
+        run: kubectl get pods -A
+
+      # 9. Optional: Run tests against services
+      - name: Test Services
+        run: |
+          kubectl get svc
