--- a/k8s/admin.yml
+++ b/k8s/admin.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: admin-deployment
+  name: admin-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: admin
+      app: admin-service
   template:
     metadata:
       labels:
-        app: admin
+        app: admin-service
     spec:
       containers:
-        - name: admin
-          image: mhdlt/admin:latest
+        - name: admin-service
+          image: admin-service:latest
           ports:
             - containerPort: 8000
           envFrom:
@@ -28,7 +28,7 @@ metadata:
   name: admin-service
 spec:
   selector:
-    app: admin
+    app: admin-service
   ports:
     - protocol: TCP
       port: 8000
