--- a/k8s/auth.yml
+++ b/k8s/auth.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-deployment
+  name: auth-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: auth
+      app: auth-service
   template:
     metadata:
       labels:
-        app: auth
+        app: auth-service
     spec:
       containers:
-        - name: auth
-          image: mhdlt/auth:latest
+        - name: auth-service
+          image: auth-service:latest
           ports:
             - containerPort: 8000
           envFrom:
@@ -28,7 +28,7 @@ metadata:
   name: auth-service
 spec:
   selector:
-    app: auth
+    app: auth-service
   ports:
     - protocol: TCP
       port: 8000
