--- a/k8s/order.yml
+++ b/k8s/order.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order-deployment
+  name: order-service
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: order
+      app: order-service
   template:
     metadata:
       labels:
-        app: order
+        app: order-service
     spec:
       containers:
-        - name: order
-          image: mhdlt/order:latest
+        - name: order-service
+          image: order-service:latest
           ports:
             - containerPort: 8000
           envFrom:
@@ -28,7 +28,7 @@ metadata:
   name: order-service
 spec:
   selector:
-    app: order
+    app: order-service
   ports:
     - protocol: TCP
       port: 8000
