--- a/k8s/postgresql.yml
+++ b/k8s/postgresql.yml
@@ -12,21 +12,21 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-deployment
+  name: postgres-service
   labels:
-    app: postgres
+    app: postgres-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: postgres-service
   template:
     metadata:
       labels:
-        app: postgres
+        app: postgres-service
     spec:
       containers:
-        - name: postgres
+        - name: postgres-service
           image: postgres:latest
           ports:
             - containerPort: 5432
@@ -44,10 +44,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
+  name: postgres-service
 spec:
   selector:
-    app: postgres
+    app: postgres-service
   ports:
     - protocol: TCP
       port: 5432
