--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,27 +72,27 @@ jobs:
         run: kubectl get nodes
 
       # 6. Build and load Docker images for FastAPI services
-      - name: Build and load auth
+      - name: Build and load auth_service
         run: |
           docker build -t auth:latest ./auth_service
           kind load docker-image auth:latest --name ci-cd-cluster
 
-      - name: Build and load product
+      - name: Build and load product_service
         run: |
           docker build -t product:latest ./product_service
           kind load docker-image product:latest --name ci-cd-cluster
 
-      - name: Build and load order
+      - name: Build and load order_service
         run: |
           docker build -t order:latest ./order_service
           kind load docker-image order:latest --name ci-cd-cluster
 
-      - name: Build and load admin
+      - name: Build and load admin_service
         run: |
           docker build -t admin:latest ./admin_service
           kind load docker-image admin:latest --name ci-cd-cluster
 
-      - name: Build and load user
+      - name: Build and load user_service
         run: |
           docker build -t user:latest ./user_service
           kind load docker-image user:latest --name ci-cd-cluster
@@ -118,3 +118,16 @@ jobs:
       - name: Test Services
         run: |
           kubectl get svc
+
+  test-auth:
+    runs-on: ubuntu-latest
+    needs: build-and-deploy
+    steps:
+      - name: Send request to Auth service
+        run: |
+          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" http://nginx-service/auth/api/v1/health)
+          echo "Auth service HTTP code: $RESPONSE"
+          if [ "$RESPONSE" -ne 200 ]; then
+            echo "Auth service is not healthy!"
+            exit 1
+          fi
