--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,5 +121,5 @@ jobs:
 
       - name: Send request to Auth service
         run: |
-          RESPONSE=$(curl -s http://nginx/auth/api/v1/user/self/get)
-          echo "$RESPONSE"
+          check_service=$(curl -s http://nginx/auth/api/v1/user/self/get)
+          echo "$check_service"
