--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,11 @@ jobs:
         run: |
           kubectl get svc
 
+      - name: Port-forward Nginx
+        run: |
+          kubectl port-forward svc/nginx-service 8080:80
+
       - name: Send request to auth-service
         run: |
-          check_service=$(curl -s http://localhost/auth/api/v1/user/self/get)
+          check_service=$(curl -s http://localhost:8080/auth/api/v1/user/self/get)
           echo "$check_service"
