--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -34,9 +34,6 @@ spec:
     app: nginx-service
   ports:
     - protocol: TCP
-      type: NodePort
-      ports:
-        - port: 80
-          targetPort: 80
-          nodePort: 80
+      port: 80
+      targetPort: 80
   type: LoadBalancer
