--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   nginx:
     image: nginx:latest
     restart: always
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - ${EXTERNAL_FASTAPI_PORT}:80
     depends_on:
       - auth-service
       - product-service
       - order-service
       - admin-service
       - user-service
-    ports:
-      - ${EXTERNAL_FASTAPI_PORT}:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
   auth-service:
     working_dir: /app
@@ -100,28 +100,24 @@ services:
     image: mongo
     container_name: mongo-db
     restart: always
-    expose:
-      - 27017
-    ports:
-      - 27017:27017
-    env_file:
-      - .env
     volumes:
       - mongo_data:/data/db
+    env_file:
+      - .env
+    ports:
+      - 27017:27017
 
   # Postgresql
   postgres-db:
     image: postgres
     container_name: postgres-db
     restart: always
-    expose:
-      - 5432
-    ports:
-      - 54032:5432
-    env_file:
-      - .env
     volumes:
       - pgdata:/var/lib/postgresql/data
+    env_file:
+      - .env
+    ports:
+      - 54032:5432
 
   pgadmin:
     image: dpage/pgadmin4
@@ -137,21 +133,32 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    restart: always
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
     ports:
       - "9090:9090"
     depends_on:
       - auth-service
+      - product-service
+      - order-service
+      - admin-service
+      - user-service
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
+    restart: always
+    volumes:
+      - grafana_data:/var/lib/grafana 
+    env_file:
+      - .env
     ports:
       - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
 
 volumes:
   pgdata:
   mongo_data:
+  prometheus_data:
+  grafana_data:
