--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,7 +2,27 @@ global:
   scrape_interval: 5s
 
 scrape_configs:
-  - job_name: "fastapi"
+  - job_name: "auth-service"
     metrics_path: /auth/api/v1/metrics
     static_configs:
-      - targets: ["auth-service:8000"]
+      - targets: ["nginx"]
+
+  - job_name: "product-service"
+    metrics_path: /product/api/v1/metrics
+    static_configs:
+      - targets: ["nginx"]
+
+  - job_name: "order-service"
+    metrics_path: /order/api/v1/metrics
+    static_configs:
+      - targets: ["nginx"]
+
+  - job_name: "admin-service"
+    metrics_path: /admin/api/v1/metrics
+    static_configs:
+      - targets: ["nginx"]
+
+  - job_name: "user-service"
+    metrics_path: /user/api/v1/metrics
+    static_configs:
+      - targets: ["nginx"]
