--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,25 +67,25 @@ jobs:
           docker build -t ${{ secrets.REGISTRY }}/auth_service:latest ./auth_service
           docker push ${{ secrets.REGISTRY }}/auth_service:latest
 
-      - name: Build and Push product-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/product_service:latest ./product_service
-          docker push ${{ secrets.REGISTRY }}/product_service:latest
+      # - name: Build and Push product-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/product_service:latest ./product_service
+      #     docker push ${{ secrets.REGISTRY }}/product_service:latest
 
-      - name: Build and Push order-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/order_service:latest ./order_service
-          docker push ${{ secrets.REGISTRY }}/order_service:latest
+      # - name: Build and Push order-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/order_service:latest ./order_service
+      #     docker push ${{ secrets.REGISTRY }}/order_service:latest
 
-      - name: Build and Push admin-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/admin_service:latest ./admin_service
-          docker push ${{ secrets.REGISTRY }}/admin_service:latest
+      # - name: Build and Push admin-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/admin_service:latest ./admin_service
+      #     docker push ${{ secrets.REGISTRY }}/admin_service:latest
 
-      - name: Build and Push user-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/user_service:latest ./user_service
-          docker push ${{ secrets.REGISTRY }}/user_service:latest
+      # - name: Build and Push user-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/user_service:latest ./user_service
+      #     docker push ${{ secrets.REGISTRY }}/user_service:latest
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
@@ -94,7 +94,7 @@ jobs:
 
       - name: Configure Kubeconfig
         run: |
-          echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > config.yaml
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > config.yaml
           export KUBECONFIG=$PWD/config.yaml
 
       - name: Check Kubeconfig
