--- a/nginx.conf
+++ b/nginx.conf
@@ -6,21 +6,21 @@ http {
         server auth-service:8000;
     }
 
-    upstream product_service {
-        server product-service:8000;
-    }
+    # upstream product_service {
+    #     server product-service:8000;
+    # }
 
-    upstream order_service {
-        server order-service:8000;
-    }
+    # upstream order_service {
+    #     server order-service:8000;
+    # }
 
-    upstream admin_service {
-        server admin-service:8000;
-    }
+    # upstream admin_service {
+    #     server admin-service:8000;
+    # }
 
-    upstream user_service {
-        server user-service:8000;
-    }
+    # upstream user_service {
+    #     server user-service:8000;
+    # }
 
     server {
         listen 80;
@@ -30,20 +30,20 @@ http {
             proxy_pass http://auth_service/;
         }
 
-        location /product/ {
-            proxy_pass http://product_service/;
-        }
+        # location /product/ {
+        #     proxy_pass http://product_service/;
+        # }
 
-        location /order/ {
-            proxy_pass http://order_service/;
-        }
+        # location /order/ {
+        #     proxy_pass http://order_service/;
+        # }
 
-        location /admin/ {
-            proxy_pass http://admin_service/;
-        }
+        # location /admin/ {
+        #     proxy_pass http://admin_service/;
+        # }
 
-        location /user/ {
-            proxy_pass http://user_service/;
-        }
+        # location /user/ {
+        #     proxy_pass http://user_service/;
+        # }
     }
 }
