--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -151,6 +151,13 @@ jobs:
         run: |
           kubectl apply -f k8s/
 
+      - name: Check Pods status
+        run: kubectl get pods -A
+
+      - name: Test Services
+        run: |
+          kubectl get svc
+
       - name: Restart nginx to pick up new config
         run: |
           kubectl rollout restart deployment nginx-service
