--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,9 @@ events {}
 
 http {
     
-    upstream auth_service {
-        server auth-service:8000;
-    }
+    # upstream auth_service {
+    #     server auth-service:8000;
+    # }
 
     # upstream product_service {
     #     server product-service:8000;
@@ -26,9 +26,9 @@ http {
         listen 80;
         server_name localhost;
 
-        location /auth/ {
-            proxy_pass http://auth_service/;
-        }
+        # location /auth/ {
+        #     proxy_pass http://auth_service/;
+        # }
 
         # location /product/ {
         #     proxy_pass http://product_service/;
