--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,10 +62,10 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - name: Build and Push auth-service
-        run: |
-          docker build -t auth:latest ./auth_service
-          docker push ${{ secrets.REGISTRY }}/auth:latest
+      # - name: Build and Push auth-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/auth:latest ./auth_service
+      #     docker push ${{ secrets.REGISTRY }}/auth:latest
 
       # - name: Build and Push product-service
       #   run: |
@@ -77,15 +77,15 @@ jobs:
       #     docker build -t ${{ secrets.REGISTRY }}/order:latest ./order_service
       #     docker push ${{ secrets.REGISTRY }}/order:latest
 
-      # - name: Build and Push admin-service
-      #   run: |
-      #     docker build -t ${{ secrets.REGISTRY }}/admin:latest ./admin_service
-      #     docker push ${{ secrets.REGISTRY }}/admin:latest
+      - name: Build and Push admin-service
+        run: |
+          docker build -t ${{ secrets.REGISTRY }}/admin:latest ./admin_service
+          docker push ${{ secrets.REGISTRY }}/admin:latest
 
-      # - name: Build and Push user-service
-      #   run: |
-      #     docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
-      #     docker push ${{ secrets.REGISTRY }}/user:latest
+      - name: Build and Push user-service
+        run: |
+          docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
+          docker push ${{ secrets.REGISTRY }}/user:latest
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
