--- a/admin_service/Dockerfile
+++ b/admin_service/Dockerfile
@@ -9,4 +9,6 @@ RUN apt-get -y upgrade
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
+EXPOSE 8000
+
 CMD ["fastapi", "run", "./src/main.py"]
