--- a/user_service/Dockerfile
+++ b/user_service/Dockerfile
@@ -11,4 +11,4 @@ RUN pip install -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["fastapi", "run", "./src/main.py"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
