--- a/k8s/user.yml
+++ b/k8s/user.yml
@@ -15,6 +15,8 @@ spec:
       containers:
         - name: user
           image: registry-fc6690c55a-mini-ecommerce.apps.ir-central1.arvancaas.ir/admin/user:latest
+          imagePullSecrets:
+            - name: arvan-regcred
           ports:
             - containerPort: 8000
           # envFrom:
