--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,12 +147,13 @@ jobs:
       #   run: |
       #     kubectl create configmap nginx-config --from-file=nginx.conf --dry-run=client -o yaml | kubectl apply -f -
 
-      - name: Deploy to Kubernetes
+      - name: Create Docker registry secret
         run: |
           kubectl create secret docker-registry arvan-regcred \
             --docker-server=${{ secrets.REGISTRY }} \
             --docker-username=${{ secrets.REGISTRY_USERNAME }} \
             --docker-password=${{ secrets.REGISTRY_PASSWORD }} \
+            --dry-run=client -o yaml | kubectl apply -f -
 
       - name: Deploy to Kubernetes
         run: |
