--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
     # }
 
     upstream user_service {
-        server user-service:8000;
+        server user:8000;
     }
 
     server {
